fix: returns bundler & precommit task, updates sweep to remove dist folder

--- a/components/form/src/styles/style.scss
+++ b/components/form/src/styles/style.scss
@@ -4,13 +4,13 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@import './../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
-@import './../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariableMap';
+@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariableMap';
 
 // general WCSS imports
-@import './../node_modules/@aurodesignsystem/webcorestylesheets/src/breakpoints';
-@import './../node_modules/@aurodesignsystem/webcorestylesheets/src/core';
-@import './../node_modules/@aurodesignsystem/webcorestylesheets/src/animation';
+@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@import '@aurodesignsystem/webcorestylesheets/src/core';
+@import '@aurodesignsystem/webcorestylesheets/src/animation';
 
 // Support for auroElement styles
 // @import './node_modules/@aurodesignsystem/webcorestylesheets/dist/auroElement/auroElement';
