--- a/components/input/demo/api.html
+++ b/components/input/demo/api.html
@@ -27,8 +27,7 @@
           Prism.highlightAll();
         });
     </script>
-    <script type="module" src="../src/index.js"></script>
-    <script type="module">
+    <script type="module" data-demo-script="true">
       import { initExamples } from "./api.min.js";
       initExamples();
     </script>
