--- a/components/input/demo/api.html
+++ b/components/input/demo/api.html
@@ -19,7 +19,7 @@
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/marked@latest/marked.min.js';
       import 'https://cdn.jsdelivr.net/npm/prismjs@latest/prism.js';
-      fetch('./api.md')
+      fetch('/demo/api.md')
         .then((response) => response.text())
         .then((text) => {
           const rawHtml = marked.parse(text);
@@ -27,8 +27,7 @@
           Prism.highlightAll();
         });
     </script>
-    <script type="module" src="../index.js"></script>
-    <script type="module">
+    <script type="module" data-demo-script="true">
       import { initExamples } from "./api.min.js";
       initExamples();
     </script>
