--- a/components/input/demo/api.html
+++ b/components/input/demo/api.html
@@ -27,7 +27,7 @@
           Prism.highlightAll();
         });
     </script>
-    <script type="module" src="../index.js"></script>
+    <script type="module" src="../src/index.js"></script>
     <script type="module">
       import { initExamples } from "./api.min.js";
       initExamples();
