--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -45,6 +45,8 @@
   white-space: nowrap;
 }
 
+
+/* stylelint-disable selector-id-pattern */
 #showStateIcon {
   display: flex;
   height: 100%;
@@ -62,6 +64,7 @@
     }
   }
 }
+/* stylelint-enable selector-id-pattern */
 
 .helpText {
   margin-top: var(--ds-size-50, $ds-size-50);
