--- a/components/input/src/styles/notificationIcons.scss
+++ b/components/input/src/styles/notificationIcons.scss
@@ -62,6 +62,9 @@
   cursor: pointer;
 
   [auro-icon] {
+    --ds-auro-icon-size: var(--ds-size-300, #{$ds-size-300});
+    
+    height: var(--ds-size-300, $ds-size-300);
     display: block;
     height: var(--ds-size-300, $ds-size-300);
 
