--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -8,18 +8,12 @@
 
 // Support for fallback values
 @import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
+@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute */
 
 :host {
   position: relative;
-}
-
-.popover {
-  display: inline-block;
-  box-sizing: border-box;
-  border-width: 1px;
-  border-style: solid;
 }
 
 .label {
@@ -87,21 +81,26 @@
   }
 }
 
-:host([common]),
-:host([rounded]) {
-  .trigger,
-  .popover {
-    border-radius: var(--ds-border-radius, $ds-border-radius);
-  }
-}
-
-:host([common]),
-:host([inset]) {
-  .trigger {
-    padding: var(--ds-size-100, $ds-size-100) var(--ds-size-150, $ds-size-150);
-  }
-}
-
 :host([disabled]) {
   pointer-events: none;
+}
+
+:host([inset]) {
+  .trigger {
+    padding: var(--ds-size-150, $ds-size-150) var(--ds-size-200, $ds-size-200);
+  }
+}
+
+:host([common]),
+:host([inset][bordered]) {
+  .trigger {
+    padding: var(--ds-size-200, $ds-size-200) var(--ds-size-150, $ds-size-150);
+  }
+}
+
+:host([common]),
+:host([rounded]) {
+  .trigger {
+    border-radius: var(--ds-border-radius, $ds-border-radius);
+  }
 }
