--- a/components/dropdown/demo/api.html
+++ b/components/dropdown/demo/api.html
@@ -42,7 +42,8 @@
     </script>
     <script type="module" src="../src/auro-dropdown.js"></script>
     <script type="module">
-      import { initExamples } from "./api.min.js"
+      import { initExamples } from "./api.min.js";
+      
       initExamples();
     </script>
 
