fix: improve custom registration example

--- a/components/dropdown/apiExamples/custom.html
+++ b/components/dropdown/apiExamples/custom.html
@@ -1,8 +1,8 @@
-<custom-dropdown id="common" common aria-label="Label content for screen reader">
+<custom-dropdown id="customCommon" common aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#common').hide()">
+    <auro-button onclick="document.querySelector('#customCommon').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
