--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -22,6 +22,19 @@
   display: none;
 }
 
+:host([fullscreen]) {
+ position: fixed;
+ top: 0;
+ left: 0;
+ width: 100vw;
+ height: 100vh;
+
+ .container {
+  width: 100%;
+  height: 100%;
+ }
+}
+
 :host([data-show]) {
   display: block;
 }
