--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -26,13 +26,19 @@
  position: fixed;
  top: 0;
  left: 0;
- width: 100vw;
- height: 100vh;
+ width: 100dvw;
+ height: 100dvh;
 
  .container {
   width: 100%;
   height: 100%;
  }
+
+ /* stylelint-disable scss/selector-no-redundant-nesting-selector */
+ & > * {
+  display: flex;
+ }
+ /* stylelint-enable scss/selector-no-redundant-nesting-selector */
 }
 
 :host([data-show]) {
