feat: add `bibSizer` to help sizing `bibContainer` with css style

--- a/components/dropdown/apiExamples/customDimensions300.html
+++ b/components/dropdown/apiExamples/customDimensions300.html
@@ -1,3 +1,9 @@
+<style>
+  #customDropdown300::part(dropdownSizer) {
+    width: 300px;
+    max-height: 200px;
+  }
+  </style>
 <div style="width: 300px;" aria-label="custom label">
   <auro-dropdown inset bordered rounded chevron>
     <div style="width: 300px; max-height: 200px; overflow: scroll;">
