--- a/components/dropdown/apiExamples/customDimensions100.html
+++ b/components/dropdown/apiExamples/customDimensions100.html
@@ -1,3 +1,9 @@
+<style>
+  #customDropdown100::part(bibSizer) {
+    width: 100px;
+    max-height: 200px;
+  }
+</style>
 <div style="width: 100px;" aria-label="custom label">
   <auro-dropdown inset bordered rounded chevron>
     <div style="width: 100px; max-height: 200px; overflow: scroll;">
