refactor: move validation of breakpoint into bib

--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -14,6 +14,13 @@
 
 :host {
   position: relative;
+
+  #bibSizer {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .label {
