--- a/components/checkbox/src/styles/tokens.scss
+++ b/components/checkbox/src/styles/tokens.scss
@@ -1,4 +1,4 @@
-@import "./../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
+@import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
 
 :host {
   --ds-auro-checkbox-border-color: var(--ds-color-border-primary-default, #{$ds-color-border-primary-default});
