--- a/components/menu/src/styles/color-menuoption.scss
+++ b/components/menu/src/styles/color-menuoption.scss
@@ -5,7 +5,7 @@
 
 /* stylelint-disable custom-property-empty-line-before, declaration-no-important */
 
-@import './../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
 
 :host {
   background-color: var(--ds-auro-menuoption-container-color);
