--- a/components/select/src/styles/tokens.scss
+++ b/components/select/src/styles/tokens.scss
@@ -1,4 +1,4 @@
-@import './../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
 
 :host {
   --ds-auro-select-placeholder-text-color: var(--ds-color-text-secondary-default, $ds-color-text-secondary-default);
