fix: make dropdown to export size to dropdownSize in `exposeCssParts`

--- a/components/select/apiExamples/customBibHeight.html
+++ b/components/select/apiExamples/customBibHeight.html
@@ -10,7 +10,7 @@
 </auro-select>
 
 <style>
-  #customBibHeightExample::part(dropdownPopover) {
+  #customBibHeightExample::part(dropdownSize) {
     max-height: 100px;
   }
 </style>
