--- a/components/datepicker/src/styles/style.scss
+++ b/components/datepicker/src/styles/style.scss
@@ -100,7 +100,7 @@
 
   .calendarWrapper {
     display: flex;
-    height: 100%;
+    height: 100dvh;
     flex-direction: row;
     justify-content: center;
   }
