fix: update dropdown's z-index and update select's height #98

--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -13,7 +13,7 @@
 
 :host {
   position: absolute;
-  z-index: 1;
+  z-index: calc(var(--depth-tooltip, $ds-depth-tooltip) + 200);
   display: none;
 }
 
