--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -21,7 +21,7 @@
   display: inline-block;
   overflow: auto;
   box-sizing: border-box;
-  margin-top: var(--ds-size-50, $ds-size-50);
+  margin: var(--ds-size-50, $ds-size-50) 0;
 }
 
 :host([isfullscreen]) {
@@ -41,7 +41,7 @@
 }
 
 :host([data-show]) {
-  display: block;
+  display: flex;
 }
 
 :host([common]:not([isfullscreen])),
