--- a/components/dropdown/apiExamples/commonMatchWidth.html
+++ b/components/dropdown/apiExamples/commonMatchWidth.html
@@ -1,4 +1,4 @@
-<auro-dropdown id="common" common matchWidth aria-label="Label content for screen reader">
+<auro-dropdown id="common" common fluid matchWidth aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
