--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -14,6 +14,12 @@
 
 :host {
   position: relative;
+  display: inline-block; 
+  max-width: 100%;
+}
+
+:host([fluid]) {
+  display: block;
 }
 
 #bibSizer {
