fix: add `fluid` attribute to dropdown and make its default display `inline-block`

--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -14,6 +14,13 @@
 
 :host {
   position: relative;
+  display: inline-block; 
+  max-width: 100%;
+}
+
+:host([fluid]),
+:host([fluid="true"]) {
+  display: block;
 }
 
 #bibSizer {
