fix: add space between bib and trigger #56

--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -21,6 +21,7 @@
   display: inline-block;
   overflow: auto;
   box-sizing: border-box;
+  margin-top: var(--ds-size-50, $ds-size-50);
 }
 
 :host([isfullscreen]) {
@@ -34,6 +35,7 @@
     height: 100dvh;
     max-height: none;
     border-radius: unset;
+    margin-top: 0;
     box-shadow: unset;
  }
 }
