feat: hide bib while loading when there is no loading placeholder to show

--- a/components/select/apiExamples/loading.html
+++ b/components/select/apiExamples/loading.html
@@ -1,6 +1,6 @@
 <auro-select id="loadingExample">
   <span slot="label">Please select a preference</span>
   <auro-menu id="loadingExampleSelectMenu">
-    <auro-loader slot="loadingIcon" orbit xs></auro-loader><span slot="loadingText">Loading...</span>
+    <!-- <auro-loader slot="loadingIcon" orbit xs></auro-loader><span slot="loadingText">Loading...</span> -->
   </auro-menu>
 </auro-select>
