docs: add `fluid` example

--- a/components/dropdown/apiExamples/fluid.html
+++ b/components/dropdown/apiExamples/fluid.html
@@ -1,4 +1,4 @@
-<auro-dropdown aria-label="custom label">
+<auro-dropdown aria-label="custom label" fluid>
   Lorem ipsum solar
   <div slot="trigger">
     <auro-input
