refactor: make `dropdown.placeholder` slot #36
BREAKING CHANGE: `placeholder` is now slot not attribute and there is no default node for it

--- a/components/select/apiExamples/customPlaceholder.html
+++ b/components/select/apiExamples/customPlaceholder.html
@@ -1,4 +1,5 @@
-<auro-select placeholder="Please select your preferred option">
+<auro-select>
+  <label slot="placeholder">Please select your preferred option</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
