--- a/components/select/apiExamples/labelWithPlaceholder.html
+++ b/components/select/apiExamples/labelWithPlaceholder.html
@@ -1,5 +1,6 @@
-<auro-select placeholder="Placeholder Text">
+<auro-select>
   <span slot="label">Label Text</span>
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
