feat: add reset functionality to input

--- a/components/input/apiExamples/value.html
+++ b/components/input/apiExamples/value.html
@@ -1,5 +1,5 @@
 <auro-button id="setValidValueBtn">Set Value to Alaska</auro-button>
-<auro-button id="resetValueBtn">Reset</auro-button>
+<auro-button id="setUndefinedValueBtn">Set Value to Undefined</auro-button>
 
 <auro-input id="setProgrammaticValueExample" value="Press one of the buttons above!" bordered>
   <span slot="label">Name</span>
