--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -10,55 +10,55 @@
 @import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
+.counter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--ds-counter-text-default);
+  column-gap: var(--ds-size-150);
+  font-family: var(--ds-font-family-default, $ds-font-family-default);
+  font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
+}
+
+.counterContent {
+  display: flex;
+  flex-flow: column;  
+}
+
+.counterLabel {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.subLabel {
+  color: var(--ds-counter-text-secondary);
+  font-size: .75rem;
+  line-height: 1rem;
+}
+
+.controlIcon {
+  color: var(--ds-counter-icon-color-default);
+}
+
+.quantityWrapper {
+  width: var(--ds-size-400);
+  height: 34px;
+  align-content: center;
+  background-color: var(--ds-counter-control-ui-bkg);
+  font-size: var(--ds-size-250);
+  text-align: center;    
+}
+
+.counterQuantity {
+  transform: translateY(0.1rem);
+}
+
 :host{
   position: relative;
-
-  .counter {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: var(--ds-counter-text-default);
-    column-gap: var(--ds-size-150);
-    font-family: var(--ds-font-family-default, $ds-font-family-default);
-    font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
-  }
-  
-  .counterContent {
-    display: flex;
-    flex-flow: column;  
-  }
-  
-  .counterLabel {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .subLabel {
-    color: var(--ds-counter-text-secondary);
-    font-size: .75rem;
-    line-height: 1rem;
-  }
 
   &::part(counterControl) {
     display: flex;
     line-height: 0;
-  }
-  
-  &::part(controlIcon) {
-    color: var(--ds-counter-icon-color-default)
-  }
-
-  .quantityWrapper {
-    width: var(--ds-size-400);
-    height: 34px;
-    align-content: center;
-    background-color: var(--ds-counter-control-ui-bkg);
-    font-size: var(--ds-size-250);
-    text-align: center;    
-  }
-
-  .counterQuantity {
-    transform: translateY(0.1rem);
   }
 
   &::part(controlMinus) {
@@ -76,8 +76,8 @@ auro-counter-button {
   display: flex;
 }
 
-:host([disabled]) {
-  &::part(controlIcon) {
+[disabled], :host([disabled]) {
+  .controlIcon {
     color: var(--ds-counter-control-ui-disabled);
   }
 
