--- a/components/checkbox/demo/api.html
+++ b/components/checkbox/demo/api.html
@@ -40,9 +40,14 @@
           Prism.highlightAll();
         });
     </script>
-    <script type="module" data-demo-script="true" src="./api.min.js"></script>
+    
+    <script type="module" data-demo-script="true">
+      import { initExamples } from "./api.min.js"
+      initExamples();
+    </script>
 
     <!-- If additional elements are needed for the demo, add them here. -->
     <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-button@latest/dist/auro-button__bundled.js" type="module"></script>
   </body>
 </html>
