--- a/components/input/src/styles/input.scss
+++ b/components/input/src/styles/input.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable property-no-vendor-prefix, selector-no-qualifying-type */
+
 // Support for fallback values
 @import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
 
@@ -20,6 +22,19 @@ input {
   &::-ms-reveal,
   &::-ms-clear {
     display: none;
+  }
+
+  // Hides the number input arrows in Chrome, Safari, Edge, and Opera
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+  }
+
+  // Hides the number input arrows in Firefox
+  &[type='number'] {
+    -moz-appearance: textfield; /* For older versions of Firefox */
+    appearance: textfield; /* Standard property */
   }
 
   &:disabled {
