perf: improve documentation around type=number

--- a/components/input/apiExamples/maxLength.html
+++ b/components/input/apiExamples/maxLength.html
@@ -1,9 +1,9 @@
-<auro-input required type="number" maxlength="12">
-  <slot slot="label">Account number</slot>
-  <slot slot="helptext">Please enter your 12 digit account number.</slot>
+<auro-input required maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered.">
+  <slot slot="label">Voucher Code</slot>
+  <slot slot="helptext">Please enter your 12 character voucher code.</slot>
 </auro-input>
 
-<auro-input bordered required type="number" maxlength="12">
-  <slot slot="label">Account number</slot>
-  <slot slot="helptext">Please enter your 12 digit account number.</slot>
+<auro-input bordered required maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered.">
+  <slot slot="label">Voucher Code</slot>
+  <slot slot="helptext">Please enter your 12 character voucher code.</slot>
 </auro-input>
