--- a/components/input/apiExamples/number.html
+++ b/components/input/apiExamples/number.html
@@ -1,9 +1,9 @@
 <auro-input required type="number">
-  <slot slot="label">Account number</slot>
-  <slot slot="helptext">Please enter your account number.</slot>
+  <slot slot="label">Number of Passengers</slot>
+  <slot slot="helptext">Please enter the number of passengers.</slot>
 </auro-input>
 
 <auro-input bordered required type="number">
-  <slot slot="label">Account number</slot>
-  <slot slot="helptext">Please enter your account number.</slot>
+  <slot slot="label">Number of Passengers</slot>
+  <slot slot="helptext">Please enter the number of passengers.</slot>
 </auro-input>
