--- a/components/dropdown/src/styles/color.scss
+++ b/components/dropdown/src/styles/color.scss
@@ -24,7 +24,7 @@
   &:focus-within {
     &:not(:active) {
       --ds-auro-dropdown-trigger-border-color: var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
-      box-shadow: inset 0 0 0 1px var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
+      outline: 1px solid var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
     }
   }
 
@@ -59,7 +59,7 @@
   --ds-auro-dropdown-trigger-border-color: var(--ds-color-border-error-default, #{$ds-color-border-error-default});
 
   .trigger {
-    box-shadow: inset 0 0 0 1px var(--ds-auro-dropdown-trigger-border-color);
+    outline: solid 1px var(--ds-auro-dropdown-trigger-border-color);
 
     &:focus-within,
     &:active {
@@ -68,6 +68,7 @@
 
     &:active {
       box-shadow: none;
+      outline: none;
     }
   }
 }
