fix: make label size to be same as placeholder's when there is no placeholder and no value

--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -10,7 +10,7 @@
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
-/* stylelint-disable selector-class-pattern */
+/* stylelint-disable selector-class-pattern, selector-max-attribute, scss/selector-nest-combinators */
 
 [slot='trigger'] {
   width: 100%;
@@ -45,6 +45,10 @@
   * {
     user-select: none;
   }
+}
+
+[slot='label'][asPlaceholder='true'] {
+  font-size: initial;
 }
 
 .outerWrapper {
