perf: remove deprecated component code #126
BREAKING CHANGE: remove unsupported deprecated code from all of our components.

--- a/components/select/apiExamples/valueAlert.html
+++ b/components/select/apiExamples/valueAlert.html
@@ -1,5 +1,5 @@
 <auro-select id="valueAlert">
-  <auro-menu>
+  <auro-menu id="valueAlertMenu">
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
     <auro-menuoption value="duration">Duration</auro-menuoption>
