feat: refactor button styles and add counter validation #91

--- a/components/counter/apiExamples/disabled.html
+++ b/components/counter/apiExamples/disabled.html
@@ -4,6 +4,7 @@
 <br>
 <hr>
 <br>
-<auro-counter subLabel="with short sub label text" disabled>
+<auro-counter disabled>
   This is an example of the wrapping behavior for a long label
+  <span slot="subLabel">with short sub label text</span>
 </auro-counter>
