--- a/components/counter/apiExamples/sub-label.html
+++ b/components/counter/apiExamples/sub-label.html
@@ -1,15 +1,18 @@
-<auro-counter subLabel="This is an example of a long sub label wrapping behavior">
-  Short label
+<auro-counter>
+Short label
+<span slot="subLabel">This is an example of a long sub label wrapping behavior</span>
 </auro-counter>
 <br>
 <hr>
 <br>
-<auro-counter subLabel="with short sub label text">
-  This is an example of the wrapping behavior for a long label
+<auro-counter>
+This is an example of the wrapping behavior for a long label
+<span slot="subLabel">with short sub label text</span>
 </auro-counter>
 <br>
 <hr>
 <br>
-<auro-counter subLabel="Combined with an example of a long sub label wrapping behavior">
-  This is an example of the wrapping behavior for a long label
+<auro-counter>
+This is an example of the wrapping behavior for a long label
+<span slot="subLabel">Combined with an example of a long sub label wrapping behavior</span>
 </auro-counter>
