docs: add placeholders in select examples

--- a/components/select/apiExamples/error.html
+++ b/components/select/apiExamples/error.html
@@ -1,4 +1,5 @@
 <auro-select error="Custom error message">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
