--- a/components/select/apiExamples/errorApi.html
+++ b/components/select/apiExamples/errorApi.html
@@ -2,6 +2,7 @@
 <auro-button id="undefinedValueExampleBtnRemoveError">Remove Error</auro-button>
 <br /><br />
 <auro-select id="errorExample" error="Custom error message">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
