--- a/components/select/apiExamples/helpText.html
+++ b/components/select/apiExamples/helpText.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <label slot="placeholder">Placeholder Text</label>
   <span slot="helpText">Custom help text message.</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
