--- a/components/select/apiExamples/resetState.html
+++ b/components/select/apiExamples/resetState.html
@@ -2,6 +2,7 @@
 <br/><br/>
 
 <auro-select id="resetStateExample" required value="price">
+  <label slot="placeholder">Placeholder Text</label>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
