--- a/components/select/apiExamples/slots.html
+++ b/components/select/apiExamples/slots.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <label slot="placeholder">Placeholder Text</label>
   <span slot="label">Please choose a preference</span>
   <span slot="helpText">Preferences are maintained for future use</span>
   <auro-menu>
