--- a/components/select/apiExamples/valueAlert.html
+++ b/components/select/apiExamples/valueAlert.html
@@ -1,4 +1,5 @@
 <auro-select id="valueAlert">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu id="valueAlertMenu">
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
