--- a/components/select/apiExamples/withIcons.html
+++ b/components/select/apiExamples/withIcons.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="air">
       <auro-icon label customColor category="health" name="air">Air</auro-icon>
