--- a/components/select/apiExamples/customErrorValidity.html
+++ b/components/select/apiExamples/customErrorValidity.html
@@ -1,4 +1,5 @@
 <auro-select id="primaryError">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="1">1</auro-menuoption>
     <auro-menuoption value="2">2</auro-menuoption>
