--- a/components/select/apiExamples/disabled.html
+++ b/components/select/apiExamples/disabled.html
@@ -1,4 +1,5 @@
 <auro-select disabled>
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
