--- a/components/select/apiExamples/flexMenuWidth.html
+++ b/components/select/apiExamples/flexMenuWidth.html
@@ -1,4 +1,5 @@
 <auro-select flexMenuWidth id="flexMenuWidthExample">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="united states">United States has a country code of (+1)</auro-menuoption>
     <auro-menuoption value="costa rica">Costa Rica has a country code of (+506)</auro-menuoption>
