--- a/components/select/apiExamples/noCheckmark.html
+++ b/components/select/apiExamples/noCheckmark.html
@@ -1,4 +1,5 @@
 <auro-select nocheckmark>
+    <label slot="placeholder">Placeholder Text</label>
     <auro-menu>
         <auro-menuoption value="stops">Stops</auro-menuoption>
         <auro-menuoption value="price">Price</auro-menuoption>
