--- a/components/select/apiExamples/required.html
+++ b/components/select/apiExamples/required.html
@@ -1,4 +1,5 @@
 <auro-select required setCustomValidityValueMissing="Custom required validation error message.">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
