--- a/components/select/apiExamples/valueExtraction.html
+++ b/components/select/apiExamples/valueExtraction.html
@@ -1,4 +1,5 @@
 <auro-select id="valueExtraction">
+  <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
